--- a/style-dark.css
+++ b/style-dark.css
@@ -206,6 +206,6 @@ main {
 }
 @media screen and (min-width: 2400px) {
 	body {
-		font-size: 10vw;
+		font-size: 1vw;
 	}
 }
